--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,237 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+body {
+  background: #000;
+}
+.twitter-page {
+  padding-left: 175px;
+  padding-top: 0;
+}
+.twitter-page h1 {
+  background-color: red;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 700;
+  font-size: 3.5rem;
+  text-align: center;
+  padding-right: 150px;
+}
+.about .card {
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #fff;
+}
+.about h1,
+h5,
+h6 {
+  background-color: red;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 700;
+  font-size: 1.5rem;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.about h1 {
+  font-size: 3rem;
+}
+.about p {
+  background-color: red;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 700;
+  font-size: 1.5rem;
+  border: 1px #c9ccd3 solid;
+  padding: 20px;
+  box-shadow: rgba(255, 255, 255, 0.15) 0px 19px 38px,
+    rgba(255, 255, 255, 0.2) 0px 15px 12px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.footer p {
+  background-color: red;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 700;
+}
+.footer .footer-icons {
+  color: #c9ccd3;
+  font-size: 25px;
+}
+.social h1 {
+  background-color: red;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 700;
+  font-size: 2rem;
+  text-align: center;
+}
+.social {
+  min-height: 70vh;
+}
+.social a {
+  color: #c9ccd3;
+  font-size: 3.5rem;
+  padding: 30px;
+}
+.social a:hover {
+  color: #5e18eb;
+}
+.projects h1 {
+  background-color: red;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 700;
+  text-align: center;
+  font-size: 3.5rem;
+  padding: 1;
+}
+.projects .project h3 {
+  background-color: red;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 700;
+  border: 1px #c9ccd3 solid;
+  padding: 20px;
+}
+
+.projects .information {
+  border: 1px #c9ccd3 solid;
+  min-height: 300px;
+}
+.projects .information-text {
+  background-color: red;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 700;
+  padding: 20px;
+}
+.projects-link a {
+  border: 1px #c9ccd3 solid;
+  padding: 10px;
+  border-radius: 7px;
+  text-decoration: none;
+}
+.projects-link a:hover {
+  background-color: #c9ccd3;
+  color: #000 !important;
+}
+.projects h3 {
+  font-weight: 700;
+}
+.projects li {
+  border: 1px #c9ccd3 solid;
+  padding: 10px;
+  border-radius: 7px;
+  text-decoration: none;
+  color: #c9ccd3;
+}
+.projects li:hover {
+  background-color: #c9ccd3;
+  color: #000 !important;
+}
+
+@media screen and (max-width: 570px) {
+  .twitter-page {
+    padding: 20px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .twitter-page h1 {
+    padding-right: 0;
+    font-size: 2rem;
   }
-  to {
-    transform: rotate(360deg);
+  .about-text {
+    margin-top: 0 !important;
+    padding: 10px !important;
   }
 }
