--- a/src/App.css
+++ b/src/App.css
@@ -80,8 +80,6 @@ h6 {
   font-size: 1.5rem;
   border: 1px #c9ccd3 solid;
   padding: 20px;
-  box-shadow: rgba(255, 255, 255, 0.15) 0px 19px 38px,
-    rgba(255, 255, 255, 0.2) 0px 15px 12px;
 }
 
 .footer p {
@@ -154,6 +152,9 @@ h6 {
   text-align: center;
   font-size: 3.5rem;
   padding: 1;
+}
+.projects .project {
+  margin-bottom: 30px;
 }
 .projects .project h3 {
   background-color: red;
